--- a/Software/WareHome Logic/WareHome Logic.csproj
+++ b/Software/WareHome Logic/WareHome Logic.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Domacinstvo.cs" />
     <Compile Include="Korisnik.cs" />
+    <Compile Include="Namirnica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
