--- a/Software/WareHome Logic/WareHome Logic.csproj
+++ b/Software/WareHome Logic/WareHome Logic.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dogadaj.cs" />
     <Compile Include="Domacinstvo.cs" />
     <Compile Include="DomacinstvoRepository.cs" />
     <Compile Include="Iznimke\WareHomeException.cs" />
