--- a/Software/WareHome/WareHome.csproj
+++ b/Software/WareHome/WareHome.csproj
@@ -203,6 +203,9 @@
     <PackageReference Include="BouncyCastle">
       <Version>1.8.9</Version>
     </PackageReference>
+    <PackageReference Include="itext7">
+      <Version>7.1.15</Version>
+    </PackageReference>
     <PackageReference Include="iTextSharp">
       <Version>5.5.13.2</Version>
     </PackageReference>
