--- a/Software/WareHome Logic/WareHome Logic.csproj
+++ b/Software/WareHome Logic/WareHome Logic.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Namirnica.cs" />
     <Compile Include="NamirnicaRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Statistika.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DatabaseAccess\DatabaseAccess.csproj">
