--- a/Software/WareHome/WareHome.csproj
+++ b/Software/WareHome/WareHome.csproj
@@ -128,6 +128,12 @@
     <EmbeddedResource Include="DodajArtiklNaListu.resx">
       <DependentUpon>DodajArtiklNaListu.cs</DependentUpon>
     </EmbeddedResource>
+    <Compile Include="TestiranjeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestiranjeForm.Designer.cs">
+      <DependentUpon>TestiranjeForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ZaboravljenaLozinkaForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -172,6 +178,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RegistracijaForm.resx">
       <DependentUpon>RegistracijaForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestiranjeForm.resx">
+      <DependentUpon>TestiranjeForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ZaboravljenaLozinkaForm.resx">
       <DependentUpon>ZaboravljenaLozinkaForm.cs</DependentUpon>
